--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
+/resources/public/js/compiled/**
+figwheel_server.log
+pom.xml
+*jar
+/lib/
+/classes/
+/out/
+/target/
+.lein-deps-sum
+.lein-repl-history
+.lein-plugins/
+.repl
+.nrepl-port
+
+# backup files
 *~
 *.swp
 *.swo
-\#*\#
